--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-    "name": "gitbook-theme-nio",
+    "name": "gitbook-plugin-theme-nio",
     "description": "nio theme for gitbook",
     "main": "index.js",
     "version": "0.0.1",
     "engines": {
         "gitbook": ">3.0.0"
     },
-    "homepage": "https://github.com/nioinnovation/gitbook-theme-nio",
+    "homepage": "https://github.com/nioinnovation/theme-nio",
     "repository": {
         "type": "git",
-        "url": "https://github.com/nioinnovation/gitbook-theme-nio"
+        "url": "https://github.com/nioinnovation/theme-nio"
     },
-    "license": "Apache 2",
+    "license": "Apache 2"
 }
