--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "engines": {
         "gitbook": ">3.0.0"
     },
-    "homepage": "https://github.com/nioinnovation/theme-nio",
+    "homepage": "https://github.com/nioinnovation/gitbook-plugin-theme-nio",
     "repository": {
         "type": "git",
-        "url": "https://github.com/nioinnovation/theme-nio"
+        "url": "https://github.com/nioinnovation/gitbook-plugin-theme-nio.git"
     },
     "license": "Apache 2",
     "scripts": {
